# slyfox-payload-controller

./: .gitignore  CMakeLists.txt  README.md
cppsrc (deprecated)/: CMakeLists.txt  main.cpp
cppsrc (deprecated)/Crsf/: CMakeLists.txt  Crsf.cpp
cppsrc (deprecated)/tests/: CMakeLists.txt  Crsf.cpp  ImageAnalyzer.cpp
gosrc/: go.sum  main.go
gosrc/analyzers/: image_analyzer.go  image_analyzer_test.go  pid_motors.go
gosrc/crsf/: crc8.go  crsf.go  crsf_test.go  definitions.go
gosrc/devices/: crsf_serial.go  servo_motor.go
gosrc/tests/: image_analyzer_test.go
gosrc/utils/: math.go  math_test.go  os.go
payloadsrc/: .gitignore
payloadsrc/lib/CRC/: crc8.cpp
payloadsrc/lib/CRSF/: CrsfSerial.cpp  CrsfSerial.hpp
payloadsrc/lib/Calculator/: Calculator.hpp
payloadsrc/src/: main.cpp
src/: CMakeLists.txt  main.cpp
src/Crsf/: CRC8.hpp  Crsf.hpp
src/Devices/: CMakeLists.txt  Devices.cpp  Devices.hpp
src/ImageAnalyzer/: CMakeLists.txt  ImageAnalyzer.cpp  ImageAnalyzer.hpp
src/MovementController/: CMakeLists.txt
src/SensorAnalyzer/: CMakeLists.txt  SensorAnalyzer.hpp
src/tests/: CMakeLists.txt  ImageAnalyzer.cpp  tests.cpp
